--- a/src/frontend/App.scss
+++ b/src/frontend/App.scss
@@ -1,14 +1,18 @@
+@import './Utilities/Mixins.scss'; 
+@import './Utilities/Variables.scss';
+// @import './Utilities/KeyFrames.scss';
+
 body {
-  background-color: #F0F0F0;
-  font-family: 'Roboto', sans-serif;
+  background-color: $white-smoke;
+  font-family: $font-stack;
 }
 
 .App {
   text-align: center;
-}
 
-.App .film-title {
-  color: white;
+  .film-title {
+    color: $white;
+  }
 }
 
 .App .film-title:hover, .overlay:hover {
@@ -16,33 +20,31 @@ body {
 }
 
 .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 5px;
+  @include grid(
+    $gap: 5px, 
+    $temp-col: repeat(auto-fit, minmax(250px, 1fr)));
 }
 
 .item {
   position: relative;
   overflow: hidden;
+  &:hover {
+    .overlay {
+      background: $light-black;
+      top: 0;
+    }
+  }
 }
 
 .overlay {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  @include apos($left: 0);
+  @include dim($w: 100%, $h: 100%);
   transition: all .9s;
   animation: fadeOut 8s;
 }
 
-.item:hover .overlay {
-  background: rgba(0, 0, 0, .5);
-  top: 0;
-}
-
 .mainImg { 
-  width: 100%;
-  height: 100%;
+  @include dim($w: 100%, $h: 100%);
   display: block;
   animation: fadeOut 3s;
 }
